@@ -16,7 +16,7 @@ global $BIGBLUEBUTTONBN_CFG;
 require_once(dirname(__FILE__).'/locallib.php');
 
 if ($ADMIN->fulltree) {
-    if( !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_server_url) || 
+    if( !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_server_url) ||
         !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_shared_secret) ) {
         $settings->add( new admin_setting_heading('bigbluebuttonbn_config_general',
                 get_string('config_general', 'bigbluebuttonbn'),
@@ -26,19 +26,19 @@ if ($ADMIN->fulltree) {
             $settings->add( new admin_setting_configtext( 'bigbluebuttonbn_server_url',
                     get_string( 'config_server_url', 'bigbluebuttonbn' ),
                     get_string( 'config_server_url_description', 'bigbluebuttonbn' ),
-                    bigbluebuttonbn_get_cfg_server_url_default()));
+                    BIGBLUEBUTTONBN_DEFAULT_SERVER_URL));
         }
         if( !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_shared_secret) ) {
             $settings->add( new admin_setting_configtext( 'bigbluebuttonbn_shared_secret',
                     get_string( 'config_shared_secret', 'bigbluebuttonbn' ),
                     get_string( 'config_shared_secret_description', 'bigbluebuttonbn' ),
-                    bigbluebuttonbn_get_cfg_shared_secret_default()));
+                    BIGBLUEBUTTONBN_DEFAULT_SHARED_SECRET));
         }
     }
 
     //// Configuration for 'recording' feature
-    if( !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_recording_default) || 
-        !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_recording_editable) || 
+    if( !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_recording_default) ||
+        !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_recording_editable) ||
         !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_recording_icons_enabled) ) {
         $settings->add( new admin_setting_heading('bigbluebuttonbn_recording',
                 get_string('config_feature_recording', 'bigbluebuttonbn'),
@@ -66,9 +66,9 @@ if ($ADMIN->fulltree) {
                     1));
         }
     }
-    
+
     //// Configuration for 'recording tagging' feature
-    if( !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_recordingtagging_default) || 
+    if( !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_recordingtagging_default) ||
         !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_recordingtagging_editable) ) {
         $settings->add( new admin_setting_heading('bigbluebuttonbn_recordingtagging',
                 get_string('config_feature_recordingtagging', 'bigbluebuttonbn'),
@@ -115,8 +115,8 @@ if ($ADMIN->fulltree) {
 
     //// Configuration for wait for moderator feature
     if( !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_waitformoderator_default) ||
-        !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_waitformoderator_editable) || 
-        !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_waitformoderator_ping_interval) || 
+        !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_waitformoderator_editable) ||
+        !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_waitformoderator_ping_interval) ||
         !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_waitformoderator_cache_ttl) ) {
         $settings->add( new admin_setting_heading('bigbluebuttonbn_feature_waitformoderator',
                 get_string('config_feature_waitformoderator', 'bigbluebuttonbn'),
@@ -189,7 +189,7 @@ if ($ADMIN->fulltree) {
     }
 
     //// Configuration for "user limit" feature
-    if( !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_userlimit_default) || 
+    if( !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_userlimit_default) ||
         !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_userlimit_editable) ) {
         $settings->add( new admin_setting_heading('config_userlimit',
                 get_string('config_feature_userlimit', 'bigbluebuttonbn'),
@@ -235,7 +235,7 @@ if ($ADMIN->fulltree) {
               get_string('config_scheduled_pre_opening_description', 'bigbluebuttonbn'),
               10, PARAM_INT));
     }
-      
+
     //// Configuration for defining the default role/user that will be moderator on new activities
     if( !isset($BIGBLUEBUTTONBN_CFG->bigbluebuttonbn_moderator_default) ) {
         $settings->add( new admin_setting_heading('bigbluebuttonbn_permission',
